--- a/RDPBotBlocker/AdaptiveFirewallService.csproj
+++ b/RDPBotBlocker/AdaptiveFirewallService.csproj
@@ -52,11 +52,11 @@
     <Compile Include="ProjectInstaller.Designer.cs">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </Compile>
-    <Compile Include="Service1.cs">
+    <Compile Include="SCAdaptiveFirewall.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Service1.Designer.cs">
-      <DependentUpon>Service1.cs</DependentUpon>
+    <Compile Include="SCAdaptiveFirewall.Designer.cs">
+      <DependentUpon>SCAdaptiveFirewall.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
