--- a/AdaptiveFirewallService.exe/AdaptiveFirewallService.csproj
+++ b/AdaptiveFirewallService.exe/AdaptiveFirewallService.csproj
@@ -48,6 +48,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <RunCodeAnalysis>true</RunCodeAnalysis>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
