--- a/AdaptiveFirewallService.exe/AdaptiveFirewallService.csproj
+++ b/AdaptiveFirewallService.exe/AdaptiveFirewallService.csproj
@@ -72,6 +72,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Network.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
